[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Map/floor.png" type="Texture" id=1]
[ext_resource path="res://scenes/Timotty.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Map.gd" type="Script" id=3]
[ext_resource path="res://scenes/Bombinha.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/GUI/Pause.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/GUI/Lost.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/GUI/Tips.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 268.8, 104 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 268.8, 192 )

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 37.6668, -0.619076, 0, 0, 0, 0, 1883.63, -0.972237, 0, 0, 0, 0, 1885.52, 123.619, 0, 0, 0, 0, 37.4123, 129.282, 0, 0, 0, 0, 36.7759, -1.06453 )
}

[node name="Map" type="Node"]
script = ExtResource( 3 )
Bombinha = ExtResource( 4 )
Timotty = ExtResource( 2 )

[node name="Plataforms" type="Node2D" parent="."]

[node name="Floor" type="StaticBody2D" parent="Plataforms" groups=[
"Environment",
]]
position = Vector2( 960.177, 788.472 )
scale = Vector2( 1.875, 1 )

[node name="Sprite" type="Sprite" parent="Plataforms/Floor"]
position = Vector2( -256.094, 3.52802 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plataforms/Floor"]
position = Vector2( -269.021, 199.766 )
shape = SubResource( 1 )

[node name="Floor2" type="StaticBody2D" parent="Plataforms" groups=[
"Environment",
]]
position = Vector2( 1920, 568 )
scale = Vector2( 1.875, 1 )

[node name="Sprite" type="Sprite" parent="Plataforms/Floor2"]
position = Vector2( -204.8, 48.0001 )
scale = Vector2( 0.4, 1 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Plataforms/Floor2"]
position = Vector2( -204.8, 224 )
scale = Vector2( 0.4, 1 )
z_index = -1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plataforms/Floor2"]
position = Vector2( -140.8, 330.881 )
shape = SubResource( 2 )

[node name="BombinhaPath" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="BombinhaSpawnLocation" type="PathFollow2D" parent="BombinhaPath"]
position = Vector2( 37.6668, -0.619076 )
rotation = -0.000191325

[node name="BombinhaTimer" type="Timer" parent="."]

[node name="PauseCanvasLayer" parent="." instance=ExtResource( 5 )]

[node name="LostCanvasLayer" parent="." instance=ExtResource( 6 )]
pause_mode = 2

[node name="TipsCanvasLayer" parent="." instance=ExtResource( 7 )]
[connection signal="timeout" from="BombinhaTimer" to="." method="_on_BombinhaTimer_timeout"]
[connection signal="try_again" from="LostCanvasLayer" to="." method="_on_LostCanvasLayer_try_again"]
[connection signal="tips_closed" from="TipsCanvasLayer" to="." method="_on_TipsCanvasLayer_tips_closed"]
